[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/_GLOBAL.gd" type="Script" id=1]
[ext_resource path="res://sfx/music_title.ogg" type="AudioStream" id=2]
[ext_resource path="res://sfx/music_quest.ogg" type="AudioStream" id=3]
[ext_resource path="res://sfx/music_ingame.ogg" type="AudioStream" id=4]
[ext_resource path="res://sfx/sfx_jump_up1.ogg" type="AudioStream" id=5]
[ext_resource path="res://sfx/sfx_jump_up2.ogg" type="AudioStream" id=6]
[ext_resource path="res://sfx/sfx_jump_fall.ogg" type="AudioStream" id=7]
[ext_resource path="res://sfx/sfx_dead.ogg" type="AudioStream" id=8]
[ext_resource path="res://sfx/sfx_walk_sand2.ogg" type="AudioStream" id=9]
[ext_resource path="res://sfx/sfx_walk_stone1.ogg" type="AudioStream" id=10]
[ext_resource path="res://sfx/sfx_esc_select.ogg" type="AudioStream" id=11]

[node name="root" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="color" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_right = 576.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 1 )

[node name="tween" type="Tween" parent="."]

[node name="sfx" type="Node" parent="."]

[node name="music_title" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 2 )

[node name="music_title_desc" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 3 )

[node name="music_level" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 4 )

[node name="sfx_jump1" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 5 )

[node name="sfx_jump2" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 6 )

[node name="sfx_fall" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 7 )

[node name="sfx_dead" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 8 )

[node name="sfx_walk_sand" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 9 )

[node name="sfx_walk_stone" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 10 )

[node name="sfx_esc_select" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 11 )

[node name="tween_music" type="Tween" parent="."]

